--- a/css/style.css
+++ b/css/style.css
@@ -262,12 +262,36 @@ h3{
     color:var(--light);
     font-family: var(--fuentePrincipal);
     letter-spacing: 3px;
-    margin: 0 auto;
+    margin: 1rem auto;
     margin-top: 2rem;
     box-shadow: rgb(26, 217, 182) 1px 0px 0px, rgb(26, 217, 182) 0.540302px 0.841471px 0px, rgb(26, 217, 182) -0.416147px 0.909297px 0px, rgb(26, 217, 182) -0.989993px 0.14112px 0px, rgb(26, 217, 182) -0.653644px -0.756803px 0px, rgb(26, 217, 182) 0.283662px -0.958924px 0px, rgb(26, 217, 182) 0.96017px -0.279416px 0px;
-
-}
- 
+    }   
+    
+    .modal select {
+        width: 20rem;
+        height: 3rem;
+        text-align: center;
+        box-shadow: rgb(26, 217, 182) 1px 0px 0px, rgb(26, 217, 182) 0.540302px 0.841471px 0px, rgb(26, 217, 182) -0.416147px 0.909297px 0px, rgb(26, 217, 182) -0.989993px 0.14112px 0px, rgb(26, 217, 182) -0.653644px -0.756803px 0px, rgb(26, 217, 182) 0.283662px -0.958924px 0px, rgb(26, 217, 182) 0.96017px -0.279416px 0px;
+        margin: 1rem;
+        background: var(--dark);
+        border: none;
+        color: var(--primary);
+        border-radius: .5rem;
+        font-size: 1.5rem;
+        font-family: var(--fuentePrincipal);
+    }
+   
+    .modal input{
+        width: 19rem;
+        height: 3rem;
+        text-align: center;
+        box-shadow: rgb(26, 217, 182) 1px 0px 0px, rgb(26, 217, 182) 0.540302px 0.841471px 0px, rgb(26, 217, 182) -0.416147px 0.909297px 0px, rgb(26, 217, 182) -0.989993px 0.14112px 0px, rgb(26, 217, 182) -0.653644px -0.756803px 0px, rgb(26, 217, 182) 0.283662px -0.958924px 0px, rgb(26, 217, 182) 0.96017px -0.279416px 0px;
+        background: var(--dark);
+        border: none;
+        color: var(--primary);
+        border-radius: .5rem;
+        font-family: var(--fuentePrincipal);
+    }
   /* The Close Button */
   .close {
       width: 10px;
